--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-image:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, large]
     steps:
       - uses: canonical/setup-lxd@main
       - uses: actions/checkout@v4
